# JUCE-ARA-VST3-CMake-example

./: CMakeLists.txt  README.markdown
src/: ARAPluginDemo.h  Main.cpp
